.k8s/01_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lobster-chat-m324
  namespace: m324-team5
  labels:
    app: lobster-chat-m324
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: lobster-chat-m324
  template:
    metadata:
      labels:
        app: lobster-chat-m324
    spec:
      containers:
        - name: lobster-chat-m324
          image: ${IMAGE_TAG}
          command:
            - /bin/sh
            - "-c"
            - yarn start
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            failureThreshold: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 5
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 25m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
