.k8s/02_service.yml
apiVersion: v1
kind: Service
metadata:
  name: lobster-chat-m324
  namespace: m324-team5
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: lobster-chat-m324
